--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
+  <style>
+ul { margin-left: 1em; }
+li { margin-bottom: 0.3em; }
+strong { color: #2d5016; }
+</style>
 </head>
 <body>
   {{ content }}
