--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,23 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <title>{{ page.title }}</title>
-  <!-- Picnic CSS CDN -->
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/picnic">
-  <style>
-    /* 可根據需要微調一些全域樣式 */
-    body {
-      padding: 2em;
-      background: #f7faf7;
-    }
-    .folder-title {
-      color: #3e7e19;
-      font-weight: bold;
-      margin-top: 1.5em;
-    }
-    .nav-list {
-      margin-bottom: 2em;
-    }
-  </style>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-LN+7fdVzj6u52u30Kp6M/trliBMCMKTyK833zpbD+pXdCLuTusPj697FH4R/5mcr" crossorigin="anonymous">
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.7/dist/js/bootstrap.bundle.min.js" integrity="sha384-ndDqU0Gzau9qJ1lfW4pNLlhNTkCfHzAVBReH9diLvGRem5+R9g2FzA8ZGN954O5Q" crossorigin="anonymous"></script>
 </head>
 <body>
   <main>
