--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,9 +101,9 @@
 <body>
   <div class="container">
     <header>
-      <img src="{{ site.baseurl }}/logo.png" alt="Hydra Logo" class="profile-pic">
-      <h1 class="title">Hydra Juice</h1>
-      <p class="description">Your daily dose of vitamin C</p>
+      <img src="{{ site.baseurl }}/logo.webp" alt="Logo" class="profile-pic">
+      <h1 class="title">SEO Editor's Guide</h1>
+      <p class="description">Your SEO Knowledge Base</p>
     </header>
 
     {{ content }}
