--- a/docs/_layouts/linktree.html
+++ b/docs/_layouts/linktree.html
@@ -102,7 +102,7 @@
 <body>
   <div class="container">
     <header>
-      <img src="{{ site.baseurl }}/assets/logo.webp" alt="Logo" class="profile-pic">
+      <img src="/assets/logo.webp" alt="Logo" class="profile-pic">
       <h1 class="title">SEO Editor's Guide</h1>
       <p class="description">Your SEO Knowledge Base</p>
     </header>
